# RaceMiner

./: .gitignore  README.md
Analyzer/cpp/: CMakeLists.txt
Analyzer/cpp/app/: CMakeLists.txt
Analyzer/cpp/app/BuildTypeGraph/: CMakeLists.txt  build_type_graph.cpp
Analyzer/cpp/app/Detect/: CMakeLists.txt  collect_lock_uses.cpp  collect_locked_access.cpp  detect_bugs.cpp  test_field.cpp
Analyzer/cpp/include/: Constants.h
Analyzer/cpp/include/AliasAnalysis/: AliasGraph.h  Steensgaard.h  SteensgaardInter.h  TypeGraph.h
Analyzer/cpp/include/CFG/: AcycleCG.h  CFG.h  CG.h  IntraAcycleCFG.h  IntraCFG.h
Analyzer/cpp/include/Concurrency/API/: LockAPI.h
Analyzer/cpp/include/Concurrency/ConcAPI/: LockAPI.h
Analyzer/cpp/include/Concurrency/RaceDetector/: LockCollector.h  LockRuleMiner.h  RaceDetector.h
Analyzer/cpp/include/Manager/DBMgr/: DBMgr.h  LinkMgr.h  LockCollectionMgr.h  LockUseMgr.h  TBLMgr.h
Analyzer/cpp/include/Manager/ModMgr/: ModMgr.h  ModPack.h
Analyzer/cpp/include/Manager/PathMgr/: PathMgr.h
Analyzer/cpp/include/ModMgr/: ModMgr.h
Analyzer/cpp/include/RaceDetector/: LockRuleMiner.h
Analyzer/cpp/include/Utils/: DBOperations.h  IROperations.h  StrOperations.h  UnionFind.h
Analyzer/cpp/lib/: CMakeLists.txt
Analyzer/cpp/lib/AliasAnalysis/: .TypeGraph.cpp.swp  AliasGraph.cpp  CMakeLists.txt  Steensgaard.cpp  SteensgaardInter.cpp  TypeGraph.cpp  tmp.cpp
Analyzer/cpp/lib/CFG/: AcycleCG.cpp  CFG.cpp  CG.cpp  CMakeLists.txt  IntraAcycleCFG.cpp  IntraCFG.cpp
Analyzer/cpp/lib/Concurrency/: CMakeLists.txt
Analyzer/cpp/lib/Concurrency/ConcAPI/: CMakeLists.txt  LockAPI.cpp
Analyzer/cpp/lib/Concurrency/RaceDetector/: CMakeLists.txt  LockCollector.cpp  LockRuleMiner.cpp  RaceDetector.cpp
Analyzer/cpp/lib/Manager/: CMakeLists.txt
Analyzer/cpp/lib/Manager/DBMgr/: CMakeLists.txt  DBMgr.cpp  LinkMgr.cpp  LockCollectionMgr.cpp  LockUseMgr.cpp  TBLMgr.cpp
Analyzer/cpp/lib/Manager/ModMgr/: CMakeLists.txt  ModMgr.cpp  ModPack.cpp
Analyzer/cpp/lib/Manager/PathMgr/: CMakeLists.txt  PathMgr.cpp
Analyzer/cpp/lib/ModMgr/: .ModMgr.cpp.swp  ModMgr.cpp  ModPack.cpp
Analyzer/cpp/lib/RaceDetector/: LockRuleMiner.cpp
Analyzer/cpp/lib/Utils/: CMakeLists.txt  DBOperations.cpp  IROperations.cpp  StrOperations.cpp
Analyzer/python/: setup.py
Analyzer/python/RaceMinerLib/Manager/DBMgr/: DBMgr.py  FuncDefMgr.py  IncludeInfoMgr.py  LinkMgr.py  LockCollectionMgr.py  StructDefMgr.py  TBLMgr.py  __init__.py
Analyzer/python/RaceMinerLib/Manager/PathMgr/: PathMgr.py  __init__.py
Analyzer/python/RaceMinerLib/Searcher/: FuncDefSearcher.py  StructDefSearcher.py  __init__.py
Analyzer/python/app/: analyze_lock.py  test.py
DBSchema/BugDetection/Race/: lock_collection.create  lock_collection.insert  lock_collection.select  lock_collection.select_file  lock_use.create  lock_use.insert  lock_use.select  lock_use.select_file
DBSchema/SourceInfo/Compile/: include_info.create  include_info.select  include_info.select_file  link.create  link.select
DBSchema/SourceInfo/Symbol/: func_def.create  func_def.insert  func_def.select  func_def.select_func  struct_def.create  struct_def.insert  struct_def.select  struct_def.select_struct
Document/: database.md
TestSuite/: Makefile
TestSuite/Concurrency/: Makefile
TestSuite/Concurrency/Race/: race.c  race.ll  typegraph.dot
TestSuite/Functions/: BitField.c  Makefile
TestSuite/include/: device.h
WorkDir/config/API/: LockAPI
WorkDir/config/Path/: Path.json
scripts/: prepare_env.sh
